# baseline-transformer

./: .gitignore  README.md  pyproject.toml
configs/: README.md
configs/parity/: wt103_512d.yaml  wt103_512d_recursive.yaml  wt103_512d_standard.yaml  wt103_768d_recursive_tajalli_match.yaml
scripts/: eval.py  train.py
src/baseline_transformer/: config.py  eval.py  nncore_bridge.py
src/baseline_transformer/cli/: __init__.py  eval.py  train.py
src/baseline_transformer/data/: __init__.py  collate.py  hf_datasets.py  packed_lm.py  tokenizers.py
src/baseline_transformer/models/: __init__.py  ofn.py  recursive.py  standard.py  tajalliyat.py
src/baseline_transformer/train/: __init__.py  build.py  optim.py  perf.py  schedule.py
src/baseline_transformer/utils/: __init__.py  run_artifacts.py
tests/: test_config_load.py  test_ofn.py  test_packed_dataset_edges.py  test_ppl_token_counted.py  test_recurrence_override.py  test_smoke_step.py  test_tajalliyat.py
